OPSMN-3296: Fixed broken textarea word wrap in IE11, which was causing horizontal scrollbar to appear and hide text content.

--- a/www/app/styles/md-input.css
+++ b/www/app/styles/md-input.css
@@ -81,6 +81,7 @@
   outline: none;
   display: block;
   width: 100%;
+  white-space: pre-wrap;
 }
 
 /*.os-md-input .ui-select-bootstrap > .ui-select-match > .caret {
